--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+
+    <style>
+      #root {
+        background-color: #f0f0f0;
+        padding: 20px;
+      }
+      button {
+        margin-left: 5px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
